# jmullan.cookiecutter.library

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  LICENSE  pyproject.toml
{{cookiecutter.project_slug}}/.github/: build-pipeline.yml  format.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_namespace}}/{{cookiecutter.project_package}}/: _jmullan_cli.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_package}}/: test_{{cookiecutter.project_package}}.py
